--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.paloski.hs.android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.paloski.pkg.android">
     <application
             android:allowBackup="false"
             android:supportsRtl="true"
